--- a/default.conf
+++ b/default.conf
@@ -4,7 +4,7 @@ server {
     server_name  localhost;
  
     #charset koi8-r;
-    access_log  /opt/nginx/logs/access.log  main;
+    #access_log  /opt/nginx/logs/access.log  main;
     error_log   /opt/nginx/logs/error.log  error;
  
     location / {
