--- a/default.conf
+++ b/default.conf
@@ -4,8 +4,8 @@ server {
     server_name  localhost;
  
     #charset koi8-r;
-    #access_log  /opt/nginx/logs/access.log  main;
-    error_log   /opt/nginx/logs/error.log  error;
+    access_log  /var/log/nginx/access.log  main;
+    error_log   /var/log/nginx/error.log  error;
  
     location / {
         # root 根目录，默认nginx镜像的html文件夹，可以指定其他
